@@ -1,10 +1,12 @@
 package programs.stream;
 
-import java.util.*;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 public class EmployeeManagementSystem {
-    private static final List<Employee> employeeList = Arrays.asList(
+    private static final List<Employee> employeeList = List.of(
             new Employee(111, "Jiya Brein", 32, "Female", "HR", 2011, 25000.0),
             new Employee(122, "Paul Niksui", 25, "Male", "Sales And Marketing", 2015, 13500.0),
             new Employee(133, "Martin Theron", 29, "Male", "Infrastructure", 2012, 18000.0),
@@ -44,211 +46,150 @@ public class EmployeeManagementSystem {
     }
 
     private static void countMaleAndFemaleEmployees() {
-        employeeList.stream()
-                .collect(Collectors.groupingBy(Employee::getGender, Collectors.counting()))
-                .forEach((gender, count) -> System.out.println(gender + ": " + count));
+        var genderCount = employeeList.stream()
+                .collect(Collectors.groupingBy(Employee::gender, Collectors.counting()));
+        genderCount.forEach((gender, count) -> System.out.println(gender + ": " + count));
     }
 
     private static void printAllDepartments() {
         employeeList.stream()
-                .map(Employee::getDepartment)
+                .map(Employee::department)
                 .distinct()
                 .forEach(System.out::println);
     }
 
     private static void printAverageAgeByGender() {
-        employeeList.stream()
-                .collect(Collectors.groupingBy(Employee::getGender, Collectors.averagingInt(Employee::getAge)))
-                .forEach((gender, avgAge) -> System.out.println(gender + ": " + avgAge));
+        var averageAgeByGender = employeeList.stream()
+                .collect(Collectors.groupingBy(Employee::gender, Collectors.averagingInt(Employee::age)));
+        averageAgeByGender.forEach((gender, avgAge) -> System.out.println(gender + ": " + avgAge));
     }
 
     private static void printHighestPaidEmployee() {
         employeeList.stream()
-                .max(Comparator.comparingDouble(Employee::getSalary))
+                .max(Comparator.comparingDouble(Employee::salary))
                 .ifPresent(employee -> System.out.println("Highest Paid Employee: " + employee));
     }
 
     private static void printEmployeesJoinedAfter(int year) {
         employeeList.stream()
-                .filter(employee -> employee.getYearOfJoining() > year)
-                .forEach(employee -> System.out.println(employee.getName()));
+                .filter(employee -> employee.yearOfJoining() > year)
+                .forEach(employee -> System.out.println(employee.name()));
     }
 
     private static void countEmployeesInEachDepartment() {
-        employeeList.stream()
-                .collect(Collectors.groupingBy(Employee::getDepartment, Collectors.counting()))
-                .forEach((department, count) -> System.out.println(department + ": " + count));
+        var departmentCount = employeeList.stream()
+                .collect(Collectors.groupingBy(Employee::department, Collectors.counting()));
+        departmentCount.forEach((department, count) -> System.out.println(department + ": " + count));
     }
 
     private static void printAverageSalaryByDepartment() {
-        employeeList.stream()
-                .collect(Collectors.groupingBy(Employee::getDepartment, Collectors.averagingDouble(Employee::getSalary)))
-                .forEach((department, avgSalary) -> System.out.println(department + ": " + avgSalary));
+        var averageSalaryByDepartment = employeeList.stream()
+                .collect(Collectors.groupingBy(Employee::department, Collectors.averagingDouble(Employee::salary)));
+        averageSalaryByDepartment.forEach((department, avgSalary) -> System.out.println(department + ": " + avgSalary));
     }
 
     private static void printYoungestMaleEmployeeInDepartment(String department) {
         employeeList.stream()
-                .filter(employee -> "Male".equals(employee.getGender()) && department.equals(employee.getDepartment()))
-                .min(Comparator.comparingInt(Employee::getAge))
+                .filter(employee -> "Male".equals(employee.gender()) && department.equals(employee.department()))
+                .min(Comparator.comparingInt(Employee::age))
                 .ifPresent(employee -> System.out.println("Youngest Male Employee in " + department + ": " + employee));
     }
 
     private static void printMostExperiencedEmployee() {
         employeeList.stream()
-                .min(Comparator.comparingInt(Employee::getYearOfJoining))
-                .ifPresent(employee -> System.out.println("Most Experienced Employee: " + employee.getName()));
+                .min(Comparator.comparingInt(Employee::yearOfJoining))
+                .ifPresent(employee -> System.out.println("Most Experienced Employee: " + employee.name()));
     }
 
     private static void countMaleAndFemaleEmployeesInDepartment(String department) {
-        employeeList.stream()
-                .filter(employee -> department.equals(employee.getDepartment()))
-                .collect(Collectors.groupingBy(Employee::getGender, Collectors.counting()))
-                .forEach((gender, count) -> System.out.println(gender + ": " + count));
+        var genderCountInDept = employeeList.stream()
+                .filter(employee -> department.equals(employee.department()))
+                .collect(Collectors.groupingBy(Employee::gender, Collectors.counting()));
+        genderCountInDept.forEach((gender, count) -> System.out.println(gender + ": " + count));
     }
 
     private static void listEmployeeNamesByDepartment() {
-        employeeList.stream()
-                .collect(Collectors.groupingBy(Employee::getDepartment))
-                .forEach((department, employees) -> {
-                    System.out.println("Department: " + department);
-                    employees.forEach(employee -> System.out.println(" - " + employee.getName()));
-                });
+        var employeesByDepartment = employeeList.stream()
+                .collect(Collectors.groupingBy(Employee::department));
+        employeesByDepartment.forEach((department, employees) -> {
+            System.out.println("Department: " + department);
+            employees.forEach(employee -> System.out.println(" - " + employee.name()));
+        });
     }
 
     private static void printOrganizationSalaryStats() {
-        DoubleSummaryStatistics stats = employeeList.stream()
-                .collect(Collectors.summarizingDouble(Employee::getSalary));
+        var stats = employeeList.stream()
+                .collect(Collectors.summarizingDouble(Employee::salary));
         System.out.println("Average Salary: " + stats.getAverage());
         System.out.println("Total Salary: " + stats.getSum());
     }
 
     private static void separateEmployeesByAge(int age) {
-        employeeList.stream()
-                .collect(Collectors.partitioningBy(employee -> employee.getAge() > age))
-                .forEach((isOlder, employees) -> {
-                    if (isOlder) {
-                        System.out.println("Employees older than " + age + " years:");
-                    } else {
-                        System.out.println("Employees " + age + " years or younger:");
-                    }
-                    employees.forEach(employee -> System.out.println(" - " + employee.getName()));
-                });
+        var employeesByAge = employeeList.stream()
+                .collect(Collectors.partitioningBy(employee -> employee.age() > age));
+        employeesByAge.forEach((isOlder, employees) -> {
+            if (isOlder) {
+                System.out.println("Employees older than " + age + " years:");
+            } else {
+                System.out.println("Employees " + age + " years or younger:");
+            }
+            employees.forEach(employee -> System.out.println(" - " + employee.name()));
+        });
     }
 
     private static void printOldestEmployeeDetails() {
         employeeList.stream()
-                .max(Comparator.comparingInt(Employee::getAge))
-                .ifPresent(employee -> System.out.println("Oldest Employee: " + employee + ", Department: " + employee.getDepartment()));
+                .max(Comparator.comparingInt(Employee::age))
+                .ifPresent(employee -> System.out.println("Oldest Employee: " + employee + ", Department: " + employee.department()));
     }
 
     private static void printMaxSalaryOfEmployeesForEachAgeGroup() {
-        // Group employees by age, then find the maximum salary for each age group and filter employees accordingly
-        Map<Integer, List<Employee>> maxSalaryOfEmployees = employeeList.stream()
-                .collect(Collectors.groupingBy(
-                        Employee::getAge, // Group by age
-                        Collectors.collectingAndThen(
-                                Collectors.toList(), // Collect into a list first
-                                employees -> {
-                                    // Find the maximum salary in the list
-                                    double maxSalary = employees.stream()
-                                            .mapToDouble(Employee::getSalary)
-                                            .max()
-                                            .orElse(0.0);
+        // Step 1: Group employees by their age
+        var employeesByAge = employeeList.stream()
+                .collect(Collectors.groupingBy(Employee::age));
 
-                                    // Filter employees who have the maximum salary
-                                    return employees.stream()
-                                            .filter(emp -> emp.getSalary() == maxSalary)
-                                            .collect(Collectors.toList());
-                                }
-                        )
+        // Step 2: For each age group, find the employee(s) with the maximum salary
+        var maxSalaryByAgeGroup = employeesByAge.entrySet().stream()
+                .collect(Collectors.toMap(
+                        Map.Entry::getKey,
+                        entry -> {
+                            var maxSalary = entry.getValue().stream()
+                                    .mapToDouble(Employee::salary)
+                                    .max()
+                                    .orElse(0.0);
+                            // Collect employees with the maximum salary for this age group
+                            return entry.getValue().stream()
+                                    .filter(employee -> employee.salary() == maxSalary)
+                                    .collect(Collectors.toList());
+                        }
                 ));
-        maxSalaryOfEmployees.forEach((age, employees) -> {
-            System.out.println(age + ": " + employees);
+
+        // Print the results
+        maxSalaryByAgeGroup.forEach((age, employees) -> {
+            System.out.println("Age " + age + ": " + employees);
         });
     }
 
     private static void printDepartmentGenderSalaryStats() {
-        // Group employees by department and gender
-        Map<String, Map<String, List<Employee>>> employeesByDeptAndGender = employeeList.stream()
-                .collect(Collectors.groupingBy(Employee::getDepartment,
-                        Collectors.groupingBy(Employee::getGender)));
+        var employeesByDeptAndGender = employeeList.stream()
+                .collect(Collectors.groupingBy(Employee::department,
+                        Collectors.groupingBy(Employee::gender)));
 
-        // Iterate over each department and gender group
         employeesByDeptAndGender.forEach((department, genderMap) -> {
             genderMap.forEach((gender, employees) -> {
-                // Calculate the average salary for the current group
-                double avgSalary = employees.stream()
-                        .mapToDouble(Employee::getSalary)
+                var avgSalary = employees.stream()
+                        .mapToDouble(Employee::salary)
                         .average()
                         .orElse(0.0);
-
-                // Log the average salary for the current group
                 System.out.println("Department: " + department + ", Gender: " + gender + ", Average Salary: " + avgSalary);
 
-                // Find the employee with the highest salary in the current group
-                Employee maxSalaryEmployee = employees.stream()
-                        .max(Comparator.comparingDouble(Employee::getSalary))
-                        .orElse(null);
-
-                // Log the details of the employee(s) with the highest salary
-                if (maxSalaryEmployee != null) {
-                    System.out.println("Highest Salary Employee in Department: " + department + ", Gender: " + gender + ": " + maxSalaryEmployee);
-                }
+                employees.stream()
+                        .max(Comparator.comparingDouble(Employee::salary))
+                        .ifPresent(maxSalaryEmployee -> System.out.println("Highest Salary Employee in Department: " + department + ", Gender: " + gender + ": " + maxSalaryEmployee));
             });
         });
     }
 }
 
-class Employee {
-    private final int id;
-    private final String name;
-    private final int age;
-    private final String gender;
-    private final String department;
-    private final int yearOfJoining;
-    private final double salary;
-
-    public Employee(int id, String name, int age, String gender, String department, int yearOfJoining, double salary) {
-        this.id = id;
-        this.name = name;
-        this.age = age;
-        this.gender = gender;
-        this.department = department;
-        this.yearOfJoining = yearOfJoining;
-        this.salary = salary;
-    }
-
-    public int getId() {
-        return id;
-    }
-
-    public String getName() {
-        return name;
-    }
-
-    public int getAge() {
-        return age;
-    }
-
-    public String getGender() {
-        return gender;
-    }
-
-    public String getDepartment() {
-        return department;
-    }
-
-    public int getYearOfJoining() {
-        return yearOfJoining;
-    }
-
-    public double getSalary() {
-        return salary;
-    }
-
-    @Override
-    public String toString() {
-        return String.format("Id: %d, Name: %s, Age: %d, Gender: %s, Department: %s, Year Of Joining: %d, Salary: %.2f",
-                id, name, age, gender, department, yearOfJoining, salary);
-    }
+record Employee(int id, String name, int age, String gender, String department, int yearOfJoining, double salary) {
 }
